--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <nav>
       <ul>
         <li><a href="/chapter1/index.html">chapter1</a></li>
-        <li><a href="/chapter2/pacific/">chapter2</a></li>
-        <li><a href="/chapter3/yoga/">chapter3</a></li>
-        <li><a href="/chapter4/ch4pacific">chapter4</a></li>
-        <li><a href="/chapter5/ch5pacific">chapter5</a></li>
-        <li><a href="/chapter6/ch6pacific">chapter6</a></li>
-        <li><a href="/chapter7/ch7pacific">chapter7</a></li>
-        <li><a href="/chapter8/ch8pacific">chapter8</a></li>
-        <li><a href="/chapter9/ch9pacific">chapter9</a></li>
-        <li><a href="/chapter10/ch10pacific">chapter10</a></li>
-        <li><a href="/chapter11/ch11pacific">chapter11</a></li>
-        <li><a href="/chapter12/ch12pacific">chapter12</a></li>
+        <li><a href="/chapter2/pacific/index.html">chapter2</a></li>
+        <li><a href="/chapter3/yoga/index.html">chapter3</a></li>
+        <li><a href="/chapter4/ch4pacific/index.html">chapter4</a></li>
+        <li><a href="/chapter5/ch5pacific/index.html">chapter5</a></li>
+        <li><a href="/chapter6/ch6pacific/index.html">chapter6</a></li>
+        <li><a href="/chapter7/ch7pacific/index.html">chapter7</a></li>
+        <li><a href="/chapter8/ch8pacific/index.html">chapter8</a></li>
+        <li><a href="/chapter9/ch9pacific/index.html">chapter9</a></li>
+        <li><a href="/chapter10/ch10pacific/index.html">chapter10</a></li>
+        <li><a href="/chapter11/ch11pacific/index.html">chapter11</a></li>
+        <li><a href="/chapter12/ch12pacific/index.html">chapter12</a></li>
 
       </ul>
     </nav>
