--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacific Trails Resort</title>
   </head>
   <body>
     <header>
       <h1>Webd152</h1>
     </header>
-    <!-- nav>ul*4>a -->
-    <nav>
+      <nav>
       <ul>
         <li><a href="/chapter1/index.html">chapter1</a></li>
         <li><a href="/chapter2/pacific/index.html">chapter2</a></li>
@@ -20,11 +19,10 @@
         <li><a href="/chapter6/ch6pacific/index.html">chapter6</a></li>
         <li><a href="/chapter7/ch7pacific/index.html">chapter7</a></li>
         <li><a href="/chapter8/ch8pacific/index.html">chapter8</a></li>
-        <li><a href="/chapter9/ch9pacific/index.html">chapter9</a></li>
+        <li><a href="/chapter9/ch9pacific/">chapter9</a></li>
         <li><a href="/chapter10/ch10pacific/index.html">chapter10</a></li>
         <li><a href="/chapter11/ch11pacific/index.html">chapter11</a></li>
         <li><a href="/chapter12/ch12pacific/index.html">chapter12</a></li>
-
       </ul>
     </nav>
 </html>
