--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pacific Trails Resort</title>
   </head>
   <body>
     <header>
       <h1>Webd152</h1>
     </header>
-      <nav>
+    <nav>
       <ul>
         <li><a href="chapter1/">chapter1</a></li>
         <li><a href="chapter2/pacific/">chapter2</a></li>
@@ -24,5 +24,6 @@
         <li><a href="chapter11/ch11pacific/">chapter11</a></li>
         <li><a href="chapter12/ch12pacific/">chapter12</a></li>
       </ul>
-          </nav>
+    </nav>
+  </body>
 </html>
